tests/ui/rfcs/rfc-2632-const-trait-impl/specialization/const-default-bound-non-const-specialized-bound.stderr
error: missing `~const` qualifier for specialization
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:33:8
   |
LL |     T: Foo, //FIXME ~ ERROR missing `~const` qualifier
   |        ^^^

error: missing `~const` qualifier for specialization
  --> $DIR/const-default-bound-non-const-specialized-bound.rs:53:8
   |
LL |     T: Foo,
   |        ^^^

error: aborting due to 2 previous errors

